[gd_scene load_steps=2 format=3 uid="uid://c8k7x2qar3m4n"]

[ext_resource type="Script" uid="uid://dpq60rvkhny4t" path="res://scripts/startup.gd" id="1_startup"]

[node name="Startup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_startup")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.18, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 700)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "IdleScapers"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Select or Create a Character"
horizontal_alignment = 1

[node name="SpacerTop" type="Control" parent="CenterContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CharacterSlots" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreateCharacterDialog" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreateCharacterDialog"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CreateCharacterDialog/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Create Character"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CreateCharacterDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CreateCharacterDialog/VBoxContainer"]
layout_mode = 2
text = "Character Name:"

[node name="NameInput" type="LineEdit" parent="CreateCharacterDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter character name..."
max_length = 20

[node name="Spacer2" type="Control" parent="CreateCharacterDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="CreateCharacterDialog/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CreateButton" type="Button" parent="CreateCharacterDialog/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Create"

[node name="CancelButton" type="Button" parent="CreateCharacterDialog/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Cancel"

[node name="DeleteConfirmDialog" type="AcceptDialog" parent="."]
title = "Confirm Deletion"
initial_position = 2
size = Vector2i(400, 150)
dialog_text = "Are you sure you want to delete this character?"
